# clothing-reckon-server

./: .gitignore  Cargo.toml  README.md  gen.sh
api/: Cargo.toml
api/src/: error.rs  jwt.rs  lib.rs  state.rs
api/src/routes/: boss.rs  clothing.rs  mod.rs  procurement.rs  production.rs  shipment.rs  staff.rs  user.rs
entity/: Cargo.toml
entity/src/: boss.rs  clothing.rs  lib.rs  prelude.rs  procurement.rs  procurement_item.rs  production.rs  production_item.rs  shipment.rs  shipment_item.rs  staff.rs  user.rs
migration/: Cargo.toml  data.drawio
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241008_102048_boss.rs  m20241008_102057_staff.rs  m20241008_102110_clothing.rs  m20241008_102121_shipment.rs  m20241008_102132_procurement.rs  m20241008_102213_shipment_item.rs  m20241008_102230_procurement_item.rs  m20241009_014954_production.rs  m20241009_015500_production_item.rs
service/: Cargo.toml
service/src/: boss.rs  clothing.rs  lib.rs  procurement.rs  production.rs  shipment.rs  staff.rs  user.rs  utils.rs
src/: main.rs
