[package]
name = "clothing-reckon"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["postgres"] }
tokio = "1.28.2"
sea-orm = { workspace = true }
api = { path = "./api" }


[workspace]
members = ["migration", "entity", "service", "api"]

[workspace.dependencies]
sea-orm = { version = "~1.1.0-rc.2", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.210", features = ["derive"] }
anyhow = "1.0.89"
tracing = "0.1.40"
serde_json = "1.0.128"
