[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde_json = "1.0.128"
tower-http = { version = "0.6.1", features = ["timeout", "cors"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
serde = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
migration = { path = "../migration" }
service = { path = "../service" }
tracing = "0.1.40"
bcrypt = "0.15.1"
